--- a/musicapp/teacher_musicapp/templates/teacher_musicapp/index.html
+++ b/musicapp/teacher_musicapp/templates/teacher_musicapp/index.html
@@ -1,4 +1,7 @@
 <h1>Query test 1</h1>
+<audio controls>
+    <source src="audio/ExampleAudio0.mp3">
+</audio>
 <h3>{{query1}}</h3>
 <h1>Query test 2</h1>
 <h3>{{query2}}</h3>
