--- a/musicapp/teacher_musicapp/templates/teacher_musicapp/frontend2.html
+++ b/musicapp/teacher_musicapp/templates/teacher_musicapp/frontend2.html
@@ -261,11 +261,10 @@
                                         <div class = "col-2" style="border-right: 2px solid #6d4b9a"> {{recording.day}}</div>
                                         <div class = "col-2" style="border-right: 2px solid #6d4b9a"> {{recording.trackable_name}}</div>
                                         <!-- <div class = "col" > {{recording.location}}</div> -->
-                                         {{ recording.location.split("/")[-1] }}
                                         <div class="col" style="border-right: 2px solid #6d4b9a">
                                             <audio controls>
                                                 <!-- <source src="audio/ExampleAudio0.mp3"> -->
-                                                <source src="audio/"+"{{ recording.location.split('/')[-1] }}">
+                                                <source src="audio/{{ recording.location }}"">
                                             </audio>
                                         </div>
                                     </div>
