fix small error

--- a/musicapp/teacher_musicapp/templates/teacher_musicapp/frontend2.html
+++ b/musicapp/teacher_musicapp/templates/teacher_musicapp/frontend2.html
@@ -264,7 +264,7 @@
                                         <div class="col" style="border-right: 2px solid #6d4b9a">
                                             <audio controls>
                                                 <!-- <source src="audio/ExampleAudio0.mp3"> -->
-                                                <source src="audio/{{ recording.location }}"">
+                                                <source src="audio/{{ recording.location }}">
                                             </audio>
                                         </div>
                                     </div>
@@ -572,8 +572,5 @@
                 element.html(name)
             }   
         </script>
-        <audio controls>
-            <source src="ms648/CS316Project/public/audio/ExampleAudio46.mp3">
-        </audio>
     </body>
 </html>
